# minml

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
bindings/python/: bind.cpp
bindings/ts/: bind.cpp  index.ts
build_py/: CMakeCache.txt  Makefile  cmake_install.cmake  example
crates/minml-core/: Cargo.toml  build.rs
crates/minml-core/cuda/: kernels.cu  kernels.h
crates/minml-core/src/: array.rs  buffer.rs  device.rs  device_dispatch.rs  dtype.rs  error.rs  lib.rs  ops.rs  primitive.rs  prng.rs  threefry.rs  transforms.rs
crates/minml-core/src/cpu/: backend.rs  kernels.rs  mod.rs  random.rs
crates/minml-core/src/cuda/: kernels.rs  mod.rs  nvrtc.rs
crates/minml-core/src/webgpu/: mod.rs  shaders.rs
crates/minml-core/tests/: cpu.rs  webgpu.rs
crates/minml-node/: Cargo.toml  build.rs  package.json
crates/minml-node/src/: lib.rs
crates/minml-py/: Cargo.toml  pyproject.toml
crates/minml-py/src/: lib.rs
crates/minml-wasm/: Cargo.toml  index.ts
crates/minml-wasm/src/: lib.rs
examples/: example.cpp  example.html  example.js  example.js.map  example.node.js  example.node.js.map  example.node.ts  example.py  example.ts  example_node.ts  minml_js.d.ts  tsconfig.json
gpm-expts/: README.md  deno.json  minml_intro.ipynb  minml_intro_python.ipynb
gpm-expts/.ipynb_checkpoints/: minml_intro-checkpoint.ipynb
include/minml/: array.h  buffer.h  device.h  distributions.h  dtype.h  ops.h  prng.h  transforms.h  webgpu.h
src/: array.cpp  array.ts  backend.h  buffer.ts  cpu_backend.cpp  cpu_random.cpp  cuda_backend.cu  device.cpp  device.ts  deviceDispatch.ts  distributions.cpp  dtype.cpp  dtype.ts  error.ts  index.ts  ops.cpp  ops.ts  primitive.ts  primitives.h  prng.cpp  prng.ts  stubs.cpp  threefry.h  threefry.ts  transforms.cpp  transforms.ts  webgpu_backend.cpp  webgpu_shaders.h
src/cpu/: backend.ts  kernels.ts  random.ts
src/cuda/: CMakeLists.txt  addon.cc  backend.ts  fused.ts  kernels.cu  kernels.h
src/fused/: expr.ts  fuse.ts  prim.ts
src/webgpu/: backend.ts  fused.ts  shaders.ts
tests/: cpu.test.ts  cuda.test.ts  jit.cuda.test.ts  jit.test.ts  threefry.test.ts
