[package]
name = "minml-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
bytemuck = { version = "1.18", features = ["derive"] }
thiserror = "2"
parking_lot = "0.12"

# WebGPU backend (optional; on by default for native + wasm32).
wgpu = { version = "26", optional = true, default-features = false, features = ["wgsl", "metal", "vulkan", "dx12", "webgpu", "fragile-send-sync-non-atomic-wasm"] }
pollster = { version = "0.4", optional = true }

[features]
default = ["webgpu"]
webgpu = ["dep:wgpu", "dep:pollster"]
cuda = []

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[dev-dependencies]
pollster = "0.4"
