[package]
name = "minml-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
minml-core = { path = "../minml-core", default-features = false }
napi = { version = "2", default-features = false, features = ["napi6", "tokio_rt", "async"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2"

[features]
default = ["webgpu"]
# Build with CUDA support: requires libcuda + libnvrtc on the host.
# `pnpm build:cuda` (see package.json). macOS hosts won't have libcuda.
cuda = ["minml-core/cuda"]
webgpu = ["minml-core/webgpu"]
