[package]
name = "minml-py"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "_minml"
crate-type = ["cdylib"]

[dependencies]
minml-core = { path = "../minml-core" }
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.26", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
